# hwPanelEmulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  fatfs_wrapper.c  fatfs_wrapper.h  ff.h  main.c  make.mk  mgl_conf.h  midi_libserialport.h  midi_portmidi.h  mingw-install_env.sh  panel.h  wid_audio.c  wid_audio.h  wid_button.c  wid_button.h  wid_eeprom.c  wid_eeprom.h  wid_encoder.c  wid_encoder.h  wid_framecounter.c  wid_framecounter.h  wid_graphics.c  wid_midi.c  wid_midi.h  wid_piano.c  wid_piano.h  wid_pot.c
m-osc/: panel_conf.h  scale.h  scale12i.h  scope_xy.h  sinc.h  sinc.ipynb  synth.c  synth.h  userpanel.c  vco.h
slseq/: panel_conf.h  userpanel.c
src/: main.c  mgl_conf.h  midi_conf.h  midi_libserialport.h  midi_portmidi.h  panel.h  wid_audio.c  wid_audio.h  wid_button.c  wid_button.h  wid_display_character.c  wid_display_character.h  wid_display_mono.c  wid_display_mono.h  wid_display_multi.c  wid_display_multi.h  wid_eeprom.c  wid_eeprom.h  wid_encoder.c  wid_encoder.h  wid_framecounter.c  wid_framecounter.h  wid_graphics.c  wid_graphics.h  wid_main.c  wid_midi.c  wid_midi.h  wid_pot.c  wid_pot.h  widget.h
user/: panel_conf.h  userpanel.c  userpanel.h  userpanel_empty.c
